Fixed the slider controls that weren't working on small screen sizes. Swapped out my borders on image windows. Added shadows to my slider button controls.

--- a/assets/FullWidthImageSlider/css/component.css
+++ b/assets/FullWidthImageSlider/css/component.css
@@ -38,16 +38,16 @@
 
 .cbp-fwslider nav span {
 	position: absolute;
-	top: 50%;
+/*	top: 50%;
 	width: 50px;
 	height: 100px;
-	background: #47a3da;
+*/	background: #47a3da;
 	color: #fff;
-	font-size: 50px;
-	text-align: center;
-	margin-top: -50px;
+/*	font-size: 50px;
+*/	text-align: center;
+/*	margin-top: -50px;
 	line-height: 100px;
-	cursor: pointer;
+*/	cursor: pointer;
 	font-weight: normal;
 }
 
